--- a/style.css
+++ b/style.css
@@ -109,8 +109,8 @@ input[type="submit"]:hover {
         display: block;
         margin: 20px auto;
         padding: 10px 20px;
-        background-color: #3c170c;
-        color: rgb(26, 19, 19);
+        background-color: #70462c;
+        color: rgb(245, 241, 241);
         border: none;
         border-radius: 4px;
         font-size: 16px;
